fix vertical line errors on mobile

--- a/static/style_about.css
+++ b/static/style_about.css
@@ -669,7 +669,7 @@ body {
 	}
 
 	.v1 {
-		height: 96vh;
+		height: 97vh;
 		margin-left: 10%;
 	}
 
@@ -687,7 +687,7 @@ body {
 	}
 
 	.v5 {
-		height: 96vh;
+		height: 97vh;
 		margin-left: 90%;
 	}
 	
