--- a/static/style_test.css
+++ b/static/style_test.css
@@ -1170,7 +1170,7 @@ hr {
 	}
 
 	.v1 {
-		height: 63vh;
+		height: 84vh;
 		margin-left: 9.8%;
 	}
 
@@ -1188,7 +1188,7 @@ hr {
 	}
 
 	.v5 {
-		height: 63vh;
+		height: 84vh;
 		margin-left: 90%;
 	}
 	
